--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -4,9 +4,9 @@
 name: python-tests
 
 on:
-#  push:
-#    branches:
-#      - '*'
+  push:
+    branches:
+      - '*'
   pull_request:
     branches:
       - '*'
