--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -1,9 +1,9 @@
 name: mingw
 
 on:
-#  push:
-#    branches:
-#      - '*'
+  push:
+    branches:
+      - '*'
   pull_request:
     branches:
       - '*'
