. e do not treat warnings as error for boost test for cygwin

--- a/tests/Boost_Tests/CMakeLists.txt
+++ b/tests/Boost_Tests/CMakeLists.txt
@@ -36,6 +36,6 @@ endif ()
 target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
-if (NOT "${CMAKE_SYSTEM_NAME}" MATCHES "CYGWIN")
+if (NOT CYGWIN)
     include(WarningsAsErrors)
 endif ()
