--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -90,7 +90,15 @@ jobs:
       run: |
         cd ApprovalTests/ApprovalTests.cpp
         cd build
-        python3 -m unittest discover -s tests --verbose
+        chmod +x run_tests.sh
+        ./run_tests.sh
+
+    - name: Publish Test Report
+      uses: mikepenz/action-junit-report@v5
+      if: success() || failure() # always run even if the previous step fails
+      with:
+        report_paths: '**/build/test-reports/*.xml'
+        detailed_summary: true
 
     - name: Test doc/sphinx with pytest
       run: |
