--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -95,7 +95,7 @@ jobs:
 
     - name: Publish Test Report
       uses: mikepenz/action-junit-report@v5
-      if: success() || failure() # always run even if the previous step fails
+      if: always()
       with:
         report_paths: '**/build/test-reports/*.xml'
         detailed_summary: true
