--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -15,8 +15,12 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, ubuntu-24.04, ubuntu-22.04]
+        python-version: ["3.12", "3.11", "3.10"]
+    runs-on: ${{ matrix.os }}
 
     steps:
     - name: Check out ApprovalTests.cpp
@@ -57,10 +61,10 @@ jobs:
         sudo apt-get install tree
         tree -d -L 2 .
 
-    - name: Set up Python 3.10
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
-        python-version: '3.10'
+        python-version: ${{ matrix.python-version }}
 
     - uses: r-lib/actions/setup-pandoc@v2
       with:
