--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   clang-format-and-update-docs:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - uses: DoozyX/clang-format-lint-action@v0.17
@@ -33,7 +33,7 @@ jobs:
   # Commented-out, as it keeps failing with http 429 error - too many requests
   # e.g. https://github.com/approvals/ApprovalTests.cpp/runs/541867195
   #  markdown-link-check:
-  #    runs-on: ubuntu-20.04
+  #    runs-on: ubuntu-22.04
   #    steps:
   #      - uses: actions/checkout@master
   #      - uses: actions/setup-node@v1
@@ -53,21 +53,21 @@ jobs:
       matrix:
         include:
           - job-name: 'clang10'
-            os-version: '20.04'
+            os-version: '22.04'
             c-compiler: 'clang-10'
             cxx-compiler: 'clang++-10'
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
           - job-name: 'clang11'
-            os-version: '20.04'
+            os-version: '22.04'
             c-compiler: 'clang-11'
             cxx-compiler: 'clang++-11'
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
           - job-name: 'clang12'
-            os-version: '20.04'
+            os-version: '22.04'
             c-compiler: 'clang-12'
             cxx-compiler: 'clang++-12'
             generator: '"Unix Makefiles"'
@@ -96,42 +96,42 @@ jobs:
             relative_build_dir_path: ''
 
           - job-name: 'gcc9'
-            os-version: '20.04'
+            os-version: '22.04'
             c-compiler: 'gcc-9'
             cxx-compiler: 'g++-9'
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
           - job-name: 'gcc10'
-            os-version: '20.04'
+            os-version: '22.04'
             c-compiler: 'gcc-10'
             cxx-compiler: 'g++-10'
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
           - job-name: 'gcc10 unity'
-            os-version: '20.04'
+            os-version: '22.04'
             c-compiler: 'gcc-10'
             cxx-compiler: 'g++-10'
             generator: '"Unix Makefiles" -DCMAKE_UNITY_BUILD=yes'
             relative_build_dir_path: ''
 
           - job-name: 'gcc10 ninja in-source'
-            os-version: '20.04'
+            os-version: '22.04'
             c-compiler: 'gcc-10'
             cxx-compiler: 'g++-10'
             generator: '"Ninja"'
             relative_build_dir_path: ''
 
           - job-name: 'gcc10 ninja out-of-source'
-            os-version: '20.04'
+            os-version: '22.04'
             c-compiler: 'gcc-10'
             cxx-compiler: 'g++-10'
             generator: '"Ninja"'
             relative_build_dir_path: '../'
 
           - job-name: 'gcc10 ninja-unity'
-            os-version: '20.04'
+            os-version: '22.04'
             c-compiler: 'gcc-10'
             cxx-compiler: 'g++-10'
             generator: '"Ninja" -DCMAKE_UNITY_BUILD=yes'
