--- a/tests/Boost_Tests/CMakeLists.txt
+++ b/tests/Boost_Tests/CMakeLists.txt
@@ -18,6 +18,9 @@ add_executable(${PROJECT_NAME}
 #  -DBOOST_ROOT=/usr/local/Cellar/boost/1.76.0/
 # 2. In CLion, you can supply this argument in each of your CMake profiles, with:
 #    Preferences -> Build, Execution, Deployment -> CMake -> 'CMake options:'
+if(POLICY CMP0167)
+    cmake_policy(SET CMP0167 NEW)
+endif()
 find_package(Boost 1.60.0 COMPONENTS REQUIRED)
 if (Boost_FOUND)
 
