--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -21,7 +21,8 @@ jobs:
         os: [ubuntu-latest]
         python-version: ["3.12"]
     runs-on: ${{ matrix.os }}
-    if: false # Disable the build
+    # if: false # Disable the build
+
     steps:
     - name: System Info
       run: |
