--- a/tests/Boost_Tests/CMakeLists.txt
+++ b/tests/Boost_Tests/CMakeLists.txt
@@ -19,9 +19,9 @@ add_executable(${PROJECT_NAME}
 # 2. In CLion, you can supply this argument in each of your CMake profiles, with:
 #    Preferences -> Build, Execution, Deployment -> CMake -> 'CMake options:'
 if(POLICY CMP0167)
-    cmake_policy(SET CMP0167 NEW)
+    cmake_policy(SET CMP0167 OLD)
 endif()
-find_package(Boost 1.70.0 COMPONENTS REQUIRED)
+find_package(Boost 1.60.0 COMPONENTS REQUIRED)
 if (Boost_FOUND)
 
     if (CYGWIN)
