.e add gcc13 ubuntu24 to matrix

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -81,6 +81,13 @@ jobs:
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
+          - job-name: 'gcc13'
+            os-version: '24.04'
+            c-compiler: 'gcc-13'
+            cxx-compiler: 'g++-13'
+            generator: '"Unix Makefiles"'
+            relative_build_dir_path: ''
+
           - job-name: 'gcc10 unity'
             os-version: '22.04'
             c-compiler: 'gcc-10'
