.e switch clang builds back to ubuntu 22, add gcc builds for gcc 11 and 12

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -54,30 +54,37 @@ jobs:
         include:
 
           - job-name: 'clang14'
-            os-version: '24.04'
+            os-version: '22.04'
             c-compiler: 'clang-14'
             cxx-compiler: 'clang++-14'
             generator: '"Unix Makefiles" "-DCMAKE_CXX_FLAGS=-stdlib=libc++ -std=c++20"'
             relative_build_dir_path: ''
 
           - job-name: 'clang15'
-            os-version: '24.04'
+            os-version: '22.04'
             c-compiler: 'clang-15'
             cxx-compiler: 'clang++-15'
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
-          - job-name: 'gcc9'
+          - job-name: 'clang16'
             os-version: '24.04'
-            c-compiler: 'gcc-9'
-            cxx-compiler: 'g++-9'
+            c-compiler: 'clang-16'
+            cxx-compiler: 'clang++-16'
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
-          - job-name: 'gcc10'
+          - job-name: 'gcc11'
             os-version: '24.04'
-            c-compiler: 'gcc-10'
-            cxx-compiler: 'g++-10'
+            c-compiler: 'gcc-11'
+            cxx-compiler: 'g++-11'
+            generator: '"Unix Makefiles"'
+            relative_build_dir_path: ''
+
+          - job-name: 'gcc12'
+            os-version: '24.04'
+            c-compiler: 'gcc-12'
+            cxx-compiler: 'g++-12'
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
@@ -88,31 +95,45 @@ jobs:
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
-          - job-name: 'gcc10 unity'
+          - job-name: 'gcc14'
             os-version: '24.04'
-            c-compiler: 'gcc-10'
-            cxx-compiler: 'g++-10'
+            c-compiler: 'gcc-14'
+            cxx-compiler: 'g++-14'
+            generator: '"Unix Makefiles"'
+            relative_build_dir_path: ''
+
+          - job-name: 'gcc15'
+            os-version: '24.04'
+            c-compiler: 'gcc-15'
+            cxx-compiler: 'g++-15'
+            generator: '"Unix Makefiles"'
+            relative_build_dir_path: ''
+
+          - job-name: 'gcc13 unity'
+            os-version: '24.04'
+            c-compiler: 'gcc-13'
+            cxx-compiler: 'g++-13'
             generator: '"Unix Makefiles" -DCMAKE_UNITY_BUILD=yes'
             relative_build_dir_path: ''
 
-          - job-name: 'gcc10 ninja in-source'
+          - job-name: 'gcc13 ninja in-source'
             os-version: '24.04'
-            c-compiler: 'gcc-10'
-            cxx-compiler: 'g++-10'
+            c-compiler: 'gcc-13'
+            cxx-compiler: 'g++-13'
             generator: '"Ninja"'
             relative_build_dir_path: ''
 
-          - job-name: 'gcc10 ninja out-of-source'
+          - job-name: 'gcc13 ninja out-of-source'
             os-version: '24.04'
-            c-compiler: 'gcc-10'
-            cxx-compiler: 'g++-10'
+            c-compiler: 'gcc-13'
+            cxx-compiler: 'g++-13'
             generator: '"Ninja"'
             relative_build_dir_path: '../'
 
-          - job-name: 'gcc10 ninja-unity'
+          - job-name: 'gcc13 ninja-unity'
             os-version: '24.04'
-            c-compiler: 'gcc-10'
-            cxx-compiler: 'g++-10'
+            c-compiler: 'gcc-13'
+            cxx-compiler: 'g++-13'
             generator: '"Ninja" -DCMAKE_UNITY_BUILD=yes'
             relative_build_dir_path: ''
 
